--- a/Nikits/style.css
+++ b/Nikits/style.css
@@ -345,6 +345,7 @@ li {
 .buyBTC{
     width: 180px;
     padding: 10px 0px;
+    border:2px solid black;
     background-color: white;
     border-radius: 12px;
     font-family: 'Inter', sans-serif;
@@ -353,4 +354,5 @@ li {
     font-weight: 700;
     line-height: normal;
     cursor: pointer;
+    text-align: center;
 }
